--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-vue": "^9.20.1",
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
