--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prepare": "cd .. && yarn husky install frontend/.husky"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
@@ -18,6 +19,7 @@
     "eslint-plugin-vue": "^9.20.1",
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "husky": "^8.0.0"
   }
 }
