--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,21 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-tailwindcss": "^3.14.0",
     "eslint-plugin-vue": "^9.20.1",
+    "husky": "^8.0.0",
     "nuxt": "^3.9.3",
+    "prettier": "^3.2.4",
+    "typescript": "*",
     "vue": "^3.4.14",
-    "vue-router": "^4.2.5",
-    "husky": "^8.0.0"
+    "vue-router": "^4.2.5"
   }
 }
