--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@commitlint/config-conventional": "^18.4.4",
     "@commitlint/format": "^18.4.4",
     "commitlint-config-gitmoji": "^2.3.1",
+    "eslint": "^8.56.0",
     "husky": "^8.0.0",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.4"
   },
   "scripts": {
     "prepare": "husky install"
