--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint \"**/*.{ts,tsx,vue,js}\" --fix",
     "lint-eslint": "eslint --ignore-path .gitignore **/*{ts,tsx,vue,js,json} --fix",
     "lint-prettier": "prettier --write \"**/*.(ts|tsx|vue|js|json)\"",
+    "lint-stylelint": "stylelint \"**/*.{css,scss,vue}\" --fix",
     "prepare": "cd .. && yarn husky install frontend/.husky"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/stylelint-module": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "eslint": "^8.0.1",
@@ -30,7 +32,12 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.9.3",
+    "postcss-html": "^1.6.0",
     "prettier": "^3.2.4",
+    "stylelint": "^16.2.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.0.0",
     "typescript": "*",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
