--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "eslint": "^8.56.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "stylelint": "^16.2.0",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.0.0"
   },
   "scripts": {
     "prepare": "husky install"
