--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "nuxt": "^3.9.3",
     "postcss-html": "^1.6.0",
     "prettier": "^3.2.4",
+    "sass": "^1.70.0",
+    "shadcn-nuxt": "^0.8.7",
     "stylelint": "^16.2.0",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -41,5 +43,16 @@
     "typescript": "*",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@vueuse/core": "^10.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.314.0",
+    "radix-vue": "^1.3.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "v-calendar": "^3.1.2"
   }
 }
