--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+# 개인 환경 파일 제외
+**/resources/application.yml
+
 ### STS ###
 .apt_generated
 .classpath
