--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,6 +36,8 @@ repositories {
 
 dependencies {
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.1'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.3.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
