--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,6 +23,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1' // gson 2.10.1
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.1'
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.3.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
