--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # 우물 API서버 URL 설정
-OOMOOL_API_URL=
+NUXT_PUBLIC_OOMOOL_API_URL=https://api-dev.oomool.site
 
 # 우물 사이트 URL 설정
-OOMOOL_SITE_URL=
+NUXT_PUBLIC_OOMOOL_SITE_URL=https://dev.oomool.site
