--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,8 @@
     "@vueuse/core": "^10.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel": "^8.0.0-rc22",
+    "embla-carousel-vue": "^8.0.0-rc22",
     "lucide-vue-next": "^0.314.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.3.2",
