--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "v-calendar": "^3.1.2"
+    "v-calendar": "^3.1.2",
+    "vue3-carousel": "^0.3.1"
   }
 }
