--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,15 +51,18 @@
     "@vueuse/core": "^10.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "firebase": "^10.7.2",
     "embla-carousel": "^8.0.0-rc22",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-vue": "^8.0.0-rc22",
     "lucide-vue-next": "^0.314.0",
+    "nuxt-vuefire": "^1.0.1",
     "pinia": "^2.1.7",
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "v-calendar": "^3.1.2",
+    "vuefire": "^3.1.22",
     "vue3-carousel": "^0.3.1"
   }
 }
