--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@commitlint/format": "^18.4.4",
     "commitlint-config-gitmoji": "^2.3.1",
     "eslint": "^8.56.0",
-    "husky": "^8.0.0",
+    "husky": "^9.0.10",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.0",
@@ -20,6 +20,6 @@
     "stylelint-scss": "^6.0.0"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky"
   }
 }
