--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "lint-eslint": "eslint --ignore-path .gitignore **/*{ts,tsx,vue,js,json} --fix",
     "lint-prettier": "prettier --write \"**/*.(ts|tsx|vue|js|json)\"",
     "lint-stylelint": "stylelint \"**/*.{css,scss,vue}\" --fix",
-    "prepare": "cd .. && yarn husky install frontend/.husky"
+    "prepare": "cd .. && yarn husky frontend/.husky"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
