--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient를 사용하기 위해 선언
+
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
