🔧 chore: html-to-image, @types/downloadjs 설치

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/stylelint-module": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.0",
+    "@types/downloadjs": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vite-pwa/nuxt": "^0.4.0",
     "eslint": "^8.0.1",
@@ -51,10 +52,12 @@
     "@vueuse/core": "^10.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "downloadjs": "^1.4.7",
     "embla-carousel": "^8.0.0-rc22",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-vue": "^8.0.0-rc22",
     "firebase": "^10.7.2",
+    "html-to-image": "^1.11.11",
     "lucide-vue-next": "^0.314.0",
     "nuxt-vuefire": "^1.0.1",
     "ohmyfetch": "^0.4.21",
