🐛 fix: Correct Jenkinsfile Typo

--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -130,10 +130,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 sh """
-                docker run \\
-                    --name ${params.IMAGE_NAME} \\ 
-                    --network ${params.DOCKER_NETWORK} \\
-                    -d -p 8080:8080 ${params.IMAGE_NAME}
+                docker run --name ${params.IMAGE_NAME} --network ${params.DOCKER_NETWORK} -d -p 8080:8080 ${params.IMAGE_NAME}
                 """
             }
 
@@ -155,10 +152,7 @@ pipeline {
                 def Author_ID = sh(script: "git show -s --pretty=%an", returnStdout: true).trim()
                 def Author_Name = sh(script: "git show -s --pretty=%ae", returnStdout: true).trim()
                 mattermostSend(color: 'good',
-                        message: """
-                        빌드 성공: ${env.JOB_NAME} #${env.BUILD_NUMBER} \\
-                            by ${Author_ID}(${Author_Name})\n(<${env.BUILD_URL}|Details>)
-                        """,
+                        message: "빌드 성공: ${env.JOB_NAME} #${env.BUILD_NUMBER} by ${Author_ID}(${Author_Name})\n(<${env.BUILD_URL}|Details>)",
                         endpoint: 'https://meeting.ssafy.com/hooks/xq6urbqcz7ga9ge4sz178dmb1c',
                         channel: 'A809-Alert'
                 )
@@ -169,10 +163,7 @@ pipeline {
                 def Author_ID = sh(script: "git show -s --pretty=%an", returnStdout: true).trim()
                 def Author_Name = sh(script: "git show -s --pretty=%ae", returnStdout: true).trim()
                 mattermostSend(color: 'danger',
-                        message: """
-                        빌드 실패: ${env.JOB_NAME} #${env.BUILD_NUMBER} \\
-                            by ${Author_ID}(${Author_Name})\n(<${env.BUILD_URL}|Details>)
-                        """,
+                        message: "빌드 실패: ${env.JOB_NAME} #${env.BUILD_NUMBER} by ${Author_ID}(${Author_Name})\n(<${env.BUILD_URL}|Details>)",
                         endpoint: "${params.MATTERMOST_ENDPOINT}",
                         channel: "${params.MATTERMOST_CHANNEL}"
                 )
