--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -110,25 +110,25 @@ pipeline {
 
         stage('Deploy') {
             steps {
-                sh """
-                echo JWT_SECRET=${env.JWT_SECRET} > env.list
-                echo REDIS_HOST=${env.REDIS_HOST} >> env.list
-                echo REDIS_PORT=${env.REDIS_PORT} >> env.list
-                echo REDIS_USERNAME=${env.REDIS_USERNAME} >> env.list
-                echo REDIS_PASSWORD=${env.REDIS_PASSWORD} >> env.list
-                echo IMGBB_SECRET=${env.IMGBB_SECRET} >> env.list
-                echo FRONTEND_URL=${env.FRONTEND_URL} >> env.list
-                echo DB_DRIVER=${env.DB_DRIVER} >> env.list
-                echo DB_URL=${env.DB_URL} >> env.list
-                echo DB_PORT=${env.DB_PORT} >> env.list
-                echo DB_NAME=${env.DB_NAME} >> env.list
-                echo DB_USERNAME=${env.DB_USERNAME} >> env.list
-                echo DB_PASSWORD=${env.DB_PASSWORD} >> env.list
-                echo KAKAO_CLIENT_ID=${env.KAKAO_CLIENT_USR} >> env.list
-                echo KAKAO_CLIENT_SECRET=${env.KAKAO_CLIENT_PSW} >> env.list
-                echo FILE_PATH=${env.FILE_PATH} >> env.list
-                echo BACKEND_URL=${env.BACKEND_URL} >> env.list
-                """
+                sh '''
+                echo JWT_SECRET=$JWT_SECRET > env.list
+                echo REDIS_HOST=$REDIS_HOST >> env.list
+                echo REDIS_PORT=$REDIS_PORT >> env.list
+                echo REDIS_USERNAME=$REDIS_USERNAME >> env.list
+                echo REDIS_PASSWORD=$REDIS_PASSWORD >> env.list
+                echo IMGBB_SECRET=$IMGBB_SECRET >> env.list
+                echo FRONTEND_URL=$FRONTEND_URL >> env.list
+                echo DB_DRIVER=$DB_DRIVER >> env.list
+                echo DB_URL=$DB_URL >> env.list
+                echo DB_PORT=$DB_PORT >> env.list
+                echo DB_NAME=$DB_NAME >> env.list
+                echo DB_USERNAME=$DB_USERNAME >> env.list
+                echo DB_PASSWORD=$DB_PASSWORD >> env.list
+                echo KAKAO_CLIENT_ID=$KAKAO_CLIENT_USR >> env.list
+                echo KAKAO_CLIENT_SECRET=$KAKAO_CLIENT_PSW >> env.list
+                echo FILE_PATH=$FILE_PATH >> env.list
+                echo BACKEND_URL=$BACKEND_URL >> env.list
+                '''
 
                 sh """
                 docker run \
