--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/stylelint-module": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.0",
     "@types/downloadjs": "^1.4.6",
+    "@types/file-saver": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@vite-pwa/nuxt": "^0.4.0",
     "eslint": "^8.0.1",
@@ -57,6 +58,7 @@
     "embla-carousel": "^8.0.0-rc22",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-vue": "^8.0.0-rc22",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.2",
     "html-to-image": "^1.11.11",
     "lucide-vue-next": "^0.314.0",
