🔧 chore: update .env.example

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,6 +4,9 @@ NUXT_PUBLIC_OOMOOL_API_URL=
 # 우물 사이트 URL 설정
 NUXT_PUBLIC_OOMOOL_SITE_URL=
 
+# Firebase FCM VAPID Key
+NUXT_PUBLIC_FIREBASE_FCM_VAPID_KEY=
+
 # Firebase Config
 FIREBASE_API_KEY=
 FIREBASE_AUTH_DOMAIN=
